{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 295,
  "lineage": "ca70c447-c676-43da-d204-25db219e3a75",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-048d6740610e9fba4",
            "public_dns": "ec2-54-250-76-172.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.76.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03d4bb6f3caa165af",
            "public_dns": "ec2-54-249-166-102.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.166.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d73e5544ffd1f78",
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:instance/i-0568626ef8912a2c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0568626ef8912a2c5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018221c65f2df25ca",
            "private_dns": "ip-172-31-44-173.ap-northeast-1.compute.internal",
            "private_ip": "172.31.44.173",
            "public_dns": "ec2-13-112-153-46.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.112.153.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-060f129b8aa4803e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example_ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6b994923",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bfea1bc3233d114"
            ]
          },
          "dependencies": [
            "module.web_server.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:internet-gateway/igw-0c426b88fac15fa4c",
            "id": "igw-0c426b88fac15fa4c",
            "owner_id": "017303550736",
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048d6740610e9fba4",
            "id": "nat-08e32d433b2a10410",
            "network_interface_id": "eni-0d05de9db041b1f4f",
            "private_ip": "10.0.1.178",
            "public_ip": "54.250.76.172",
            "subnet_id": "subnet-020ed76a1d534fb24"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_0",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d4bb6f3caa165af",
            "id": "nat-03c1be601aa61e41e",
            "network_interface_id": "eni-0d2cde082f71be395",
            "private_ip": "10.0.2.169",
            "public_ip": "54.249.166.102",
            "subnet_id": "subnet-0f678e8332f49bb8c"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_1",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084164a3109ce4ebb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-08e32d433b2a10410",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084164a3109ce4ebb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_0",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.nat_gateway_0",
            "module.network.aws_route_table.private_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024168f52f79633b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03c1be601aa61e41e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024168f52f79633b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_1",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.nat_gateway_1",
            "module.network.aws_route_table.private_1",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c426b88fac15fa4c",
            "id": "r-rtb-0f342ace069f1ee951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f342ace069f1ee95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-084164a3109ce4ebb",
            "owner_id": "017303550736",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-024168f52f79633b6",
            "owner_id": "017303550736",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f342ace069f1ee95",
            "owner_id": "017303550736",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ba4eabdfb5ff32c",
            "route_table_id": "rtb-084164a3109ce4ebb",
            "subnet_id": "subnet-0663f7e53875954c5"
          },
          "dependencies": [
            "module.network.aws_route_table.private_0",
            "module.network.aws_subnet.private_0",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefade73ce6247da",
            "route_table_id": "rtb-024168f52f79633b6",
            "subnet_id": "subnet-07917668fe858fa71"
          },
          "dependencies": [
            "module.network.aws_route_table.private_1",
            "module.network.aws_subnet.private_1",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3730acebe9ef49e",
            "route_table_id": "rtb-0f342ace069f1ee95",
            "subnet_id": "subnet-020ed76a1d534fb24"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf3d1bc2028abf7",
            "route_table_id": "rtb-0f342ace069f1ee95",
            "subnet_id": "subnet-0f678e8332f49bb8c"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:security-group/sg-05fd637aaae3416bd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05fd637aaae3416bd",
            "ingress": [],
            "name": "https-sg",
            "name_prefix": null,
            "owner_id": "017303550736",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:security-group/sg-0710d6e3f4a60d911",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0710d6e3f4a60d911",
            "ingress": [],
            "name": "http-sg",
            "name_prefix": null,
            "owner_id": "017303550736",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:security-group/sg-03bfea1bc3233d114",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bfea1bc3233d114",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example_ec2",
            "name_prefix": null,
            "owner_id": "017303550736",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-f73a2d90"
          }
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:security-group/sg-01434fbb128e4c2df",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01434fbb128e4c2df",
            "ingress": [],
            "name": "http-redirect-sg",
            "name_prefix": null,
            "owner_id": "017303550736",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2171981403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05fd637aaae3416bd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.https_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-465597998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0710d6e3f4a60d911",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.http_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3954829989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01434fbb128e4c2df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.http_redirect_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-268445783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fd637aaae3416bd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.https_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2657053033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0710d6e3f4a60d911",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.http_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2691899103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01434fbb128e4c2df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.http_redirect_sg.aws_security_group.default",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:subnet/subnet-0663f7e53875954c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "id": "subnet-0663f7e53875954c5",
            "map_public_ip_on_launch": false,
            "owner_id": "017303550736",
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:subnet/subnet-07917668fe858fa71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "id": "subnet-07917668fe858fa71",
            "map_public_ip_on_launch": false,
            "owner_id": "017303550736",
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:subnet/subnet-020ed76a1d534fb24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-020ed76a1d534fb24",
            "map_public_ip_on_launch": true,
            "owner_id": "017303550736",
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:subnet/subnet-0f678e8332f49bb8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f678e8332f49bb8c",
            "map_public_ip_on_launch": true,
            "owner_id": "017303550736",
            "vpc_id": "vpc-0229aede0d51d8feb"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:017303550736:vpc/vpc-0229aede0d51d8feb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021112a9c2e62e40f",
            "default_route_table_id": "rtb-05b76d8af742d2fcc",
            "default_security_group_id": "sg-016d7a77346aa1a29",
            "dhcp_options_id": "dopt-d9e8d5be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0229aede0d51d8feb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05b76d8af742d2fcc",
            "owner_id": "017303550736",
            "tags": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}